webapl-1/webapl1-private.yaml
#
# アプリケーションのデプロイ
#
# サービス
apiVersion: v1
kind: Service
metadata:
  name: webapl1
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
---
## デプロイメント 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapl1
spec:
  replicas: 1
  selector:           # これは deployment - pod 対応用
    matchLabels:
      app: web
  template:           # ここからポッド・テンプレート
    metadata:
      labels:
        app: web      # ポッドのラベル
    spec:
      containers:
      - name: webapl1
        image: harbor.labo.local/k8s/webapl-1:1.1
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
